--- a/dance.html
+++ b/dance.html
@@ -6,14 +6,14 @@
     <title>Dance</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="dance.css">
+    <link rel="stylesheet" href="css/dance.css">
 </head>
 <body>
     <section class="top-header-section">
         <div class="container">
             <div class="main-column">
                 <div class="left-box">
-                    <img src="image/Untitled-1.png" alt="">
+                    <img src="image/Untitled-1.png" alt="main-image">
                 </div>
                 <div class="right-box">
                     <ul>
@@ -77,7 +77,7 @@
                     <img src="image/Untitled-6.png" alt="">
                 </div>
                 <div class="right-box">
-                    <h2>Let’s Dance</h2>
+                    <h2>Let's Dance</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. </p>
                     <div class="batton">
                         <a href="#">Start Now</a>
